--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,8 +23,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h1 class="project-name">Dana Schepers Healthcare</h1>
+      <h2 class="project-tagline">Healthcare 4 u</h2>
       {% if site.github.is_project_page %}
         <a href="tel:+31600000000" class="btn">Bel mij: 0600000000</a>
         <a href="mailto:info@danaschepers.nl" class="btn">E-mail mij</a>
